--- a/Sales_Predictor.ipynb
+++ b/Sales_Predictor.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "### SALES PREDICTION USING PYTHON\n",
     "\n",
-    "### DHRUPAD CHAKRABORTY"
+    "### Hari Rama Chandran A"
    ]
   },
   {
